:bug: - fix: fix a bug in the Input component that cuase it to appear with the wrong font weight

--- a/src/components/form/input/input.scss
+++ b/src/components/form/input/input.scss
@@ -2,6 +2,7 @@
   --mykn-input-padding-v: 0;
   --mykn-input-padding-h: 0;
   --mykn-input-font-size: var(--typography-font-size-body-s);
+  --mykn-input-font-weight: var(--typography-font-weight-normal);
   --mykn-input-line-height: var(--typography-line-height-body-s);
 
   appearance: none;
